--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Teamable</title>
         <script src="app.js"></script>
+        <meta charset="utf-8" />
     </head>
     <body>
         <div id="app"></div>
